# pg_x

./: .gitignore  Cargo.toml  Dockerfile  README.md  config.toml  config.toml.example  docker-compose.yml  init.sql  pgx_graphql_todo.md
.devcontainer/: Dockerfile  devcontainer.json
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
.opencode/: opencode.json
docs/: mcp-implementation.md  replication-roadmap.md
examples/graphql/: README.md
examples/graphql/pgx/: config.toml
examples/graphql/pgx/queries/: MaterialFull.graphql
examples/graphql/pgx/schema/: attribute.graphql  colorway.graphql  feature.graphql  material.graphql  size.graphql
scripts/: setup_postgres.sh  test_consume.sh  test_consume_kv.sh  test_listen.sh  test_listen_consume_es.sh  test_replicate.sh
skills/pgx-cli/: SKILL.md
src/: main.rs
src/commands/: consume.rs  doctor.rs  export.rs  graphql.rs  info.rs  listen.rs  mod.rs  profiles.rs  psql.rs  query.rs  replicate.rs
src/commands/mcp/: mod.rs
src/commands/replicate/: applier.rs  filter.rs  iceberg.rs  mod.rs  parquet.rs  sinks.rs  transforms.rs
src/consumer/: kafka.rs  kv.rs  mod.rs  rabbitmq.rs  trait.rs
src/downstream/: bulk.rs  contract.rs  elasticsearch.rs  kafka.rs  mod.rs  rabbitmq.rs  shell.rs  webhook.rs
src/graphql/: dataloader.rs  executor.rs  mod.rs  pool.rs  query.rs  row.rs  schema.rs
src/replication/: client.rs  decoder.rs  error.rs  event.rs  framing.rs  lsn.rs  proto.rs  slot.rs
src/utils/: backoff.rs  config.rs  db.rs  excel.rs  format.rs  mod.rs  signal.rs  tls.rs
