[package]
name = "pgx"
version = "0.1.0"
edition = "2021"
description = "A feature-rich PostgreSQL CLI tool — beyond psql"
authors = ["jyasuu"]

[[bin]]
name = "pgx"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }

# Postgres async driver (control plane: slot management, wal_level check)
tokio-postgres = { version = "0.7", default-features = false, features = ["runtime", "with-chrono-0_4", "with-uuid-1", "with-serde_json-1"] }
tokio = { version = "1", features = ["full"] }

# TLS for the control-plane connection (optional)
tokio-postgres-rustls = { version = "0.10", optional = true }
rustls = { version = "0.21", optional = true }

# TLS for the replication stream (optional, shares `tls` feature)
tokio-rustls = { version = "0.24", optional = true }

# Excel output (optional, enabled by default)
rust_xlsxwriter = { version = "0.64", optional = true }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Output / display
comfy-table = "7"
indicatif = "0.17"
colored = "2"

# Error handling
anyhow = "1"
thiserror = "1"

# Misc
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
dirs = "5"
toml = "0.8"
url = "2"
csv = "1"

# Async utilities
async-trait = "0.1"
futures = "0.3"

# Replication frame parsing and SCRAM auth
# (used by our inlined replication client in src/replication/)
bytes = "1"
hex = "0.4"
base64 = "0.22"
hmac = "0.12"
sha2 = "0.10"
rand = "0.9"

# RabbitMQ (AMQP) - feature-gated
lapin = { version = "2", default-features = false, features = ["rustls"], optional = true }

# HTTP client for webhook and elasticsearch - feature-gated
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"], optional = true }

# Key-Value store sinks (Redis / Memcached) - feature-gated
redis = { version = "1", default-features = false, features = ["tokio-comp"], optional = true }

# Kafka - feature-gated (requires librdkafka system library)
rdkafka = { version = "0.36", optional = true }
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
tracing = "0.1.44"

# async-memcached uses UnixStream (Unix-only); also transitively pulls in openssl-sys
# via toxiproxy_rust → reqwest → native-tls. Force vendored OpenSSL for cross-compilation.
[target.'cfg(unix)'.dependencies]
async-memcached = "0.6"
openssl-sys = { version = "0.9", features = ["vendored"] }

[features]
default = ["rabbitmq", "webhook", "excel", "elasticsearch", "kv"]
excel = ["rust_xlsxwriter"]
tls = ["tokio-postgres-rustls", "rustls", "tokio-rustls"]
rabbitmq = ["lapin"]
kafka = ["rdkafka"]
webhook = ["reqwest"]
elasticsearch = ["reqwest"]
kv = ["redis"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
